<resources>
    <string name="app_name">Sliding puzzles</string>
    
    <string name="start_game">Start game</string>
    <string name="start_new_game">Start new game</string>
    <string name="puzzle_completed">Puzzle completed!</string>
    <string name="enable_numbers">Enable numbers</string>

    <string name="choose_image_puzzle_source">Choose a source for the sliding puzzle</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="take_picture">Take a photo</string>
</resources>