<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.checkbox.MaterialCheckBox
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/puzzle_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        android:id="@+id/enable_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/enable_numbers"/>

    <com.slidingpuzzle.engine.ImagePuzzleView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enable_numbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        app:layout_constraintDimensionRatio="1:1"
        android:id="@+id/puzzle_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <com.slidingpuzzle.app.ui.puzzle.GridSelectorView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/start_button"
        app:layout_constraintEnd_toStartOf="@id/start_button"
        app:layout_constraintBottom_toBottomOf="@id/start_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:id="@+id/grid_selector_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"/>

    <com.google.android.material.button.MaterialButton
        app:layout_constraintStart_toEndOf="@id/grid_selector_view"
        app:layout_constraintTop_toBottomOf="@id/puzzle_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/start_game"/>

    <com.google.android.material.button.MaterialButton
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/start_button"
        android:id="@+id/start_new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/start_new_game"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>